fin test clean code